istio-example/petKube/petinfo.yaml
apiVersion: v1
kind: Service
metadata:
  name: petservice
  labels:
    app: petservice
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: petservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petservice-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petservice
  template:
    metadata:
      labels:
        app: petservice
        version: v1
    spec:
      containers:
      - name: petservice
        image: jacksonlima91/petservice:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
